# alpaka

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  CalcVolumeForceForElems_kernel.txt  LULESH_PORT.md  MakeLuleshCuda  lulesh_port.md  profile.csv  result.csv  shellscr  testParams.bash  xyz.asc
Profile/: gtx1070_alpaka.nvprof
alpaka_lulesh/cuda/: CMakeLists.txt
alpaka_lulesh/cuda/src/: allocator.h  alpaka_utils.h  lulesh.cu  lulesh_kernels.h  util.h  vector.h
example/: CMakeLists.txt
example/Matmul_Example/: CMakeLists.txt
example/Matmul_Example/src/: matmul_alpaka.cpp
example/helloWorld/: CMakeLists.txt
example/matrixMul/: CMakeLists.txt
example/matrixMul/src/: matrixMul.cpp
lulesh/: CMakeLists.txt
lulesh/cuda/: CMakeLists.txt
lulesh/cuda/src/: allocator.cu  alpaka_utils.h  lulesh.cu  lulesh.h  lulesh_backup.cu  lulesh_kernels.h  vector.h
lulesh/cuda/test/: alpaka_vector_test.h
lulesh_orig/: CMakeLists.txt  CalcVolumeForceForElems_kernel.txt
lulesh_orig/cuda/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lulesh2.0  output.csv  output.txt  profile.txt  shellscr  skript_lulesh  xyz.asc
lulesh_orig/cuda/src/: kernel.cu  kernel.h  lulesh.cu  test.h
presentation/: .~lock.first_nvprof.odp#  first_nvprof.odp
