################################################################################
# Required CMake version.
################################################################################

cmake_minimum_required(VERSION 3.22)

project("alpakaLulesh" LANGUAGES CUDA CXX)

################################################################################
# Add subdirectories.
################################################################################

add_subdirectory("cuda/")

