################################################################################
# Required CMake version.
################################################################################

cmake_minimum_required(VERSION 3.22)

project("alpakaLuleshOrig" LANGUAGES CUDA CXX)

################################################################################
# Add subdirectories.
################################################################################

add_subdirectory("cuda/")
