cmake_minimum_required(VERSION 3.22)
project(LULESH LANGUAGES CUDA CXX)

if(NOT DEFINED CMAKE_CUDA_STANDARD)
    set(CMAKE_CUDA_STANDARD 11)
    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
endif()

if (WITH_MPI)
  find_package(MPI REQUIRED)
  include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
  add_definitions("-DUSE_MPI=1")
  list(APPEND LULESH_EXTERNAL_LIBS ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
else()
  add_definitions("-DUSE_MPI=0")
endif()

if (WITH_OPENMP)
  find_package(OpenMP REQUIRED)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

set(LULESH_SOURCES ./src/allocator.h ./src/allocator.cu ./src/lulesh-comms.cu ./src/lulesh-comms-gpu.cu ./src/lulesh.cu  ./src/lulesh.h ./src/util.h ./src/vector.h)
set(LULESH_EXEC lulesh2.0)
add_executable(${LULESH_EXEC} ${LULESH_SOURCES})
target_link_libraries(${LULESH_EXEC} ${LULESH_EXTERNAL_LIBS})
set_target_properties(${LULESH_EXEC} PROPERTIES CUDA_ARCHITECTURES "50;60;72")
